# palmkit

./: .gitignore  ChangeLog  Makefile  README.jp  README.md
doc/: SLMContextLength.html  SLMFreeLM.html  SLMGetBOProb.html  SLMID2Word.html  SLMReadLM.html  SLMVocabSize.html  SLMWord2ID.html  changeidvocab.html  ctext2class.html  ctext2idngram.html  evallm.html  idngram2lm.html  index.html  interpolate.html  manual.html  mergeidngram.html  mixidngram.html  ngram2mgram.html  reverseidngram.html  reverseword.html  skel.html  text2class.html  text2idngram.html  text2idtext.html  text2wfreq.html  tk-diagram.eps  tk-diagram2.eps  wfreq2vocab.html
ruby/: MANIFEST  README.jp  extconf.rb  palmkit.c
sample/: Makefile  sample1.c
src/: 2arpato1arpa  Makefile  Makefile.in  changeidvocab.c  config.cache  config.status  configure  configure.in  ctext2class  ctext2idngram.c  ehmm.c  ehmm.h  evallm.c  forback.c  idngram.c  idngram.h  idngram2lm.c  initehmm.c  interpolate.c  learnehmm.c  mergeidngram.c  mergeidwfreq.c  mixidngram.c  mixidwfreq.c  ngram2mgram.c  ngramd.c  remove_tmp.c  remove_tmp.h  reverseidngram.c  reverseword  text2class  text2idngram.c  text2idtext  text2wfreq.c  viterbiehmm.c  wfreq2vocab.c
src/libs/: Makefile  Makefile.in  checkversize.c  context.c  context.h  float_autom.c  float_autom.x  hash.c  hash.h  int_autom.c  int_autom.x  io.c  io.h  libs.h  misc.c  misc.h  mkslm_h  net.c  net.h  ngram.c  ngram.h  ngramcount.c  ngramd.h  proc_autom.pl  vocab.c  vocab.h
