dnl Process this file with autoconf to produce a configure script.
AC_INIT(ctext2idngram.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for header files.
AC_CHECK_HEADERS(zlib.h,HAVE_ZLIB_H=1)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SIGNAL

dnl Checks for library functions.
AC_FUNC_VPRINTF
dnl AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(strchr strspn regcomp)

AC_ARG_ENABLE(zlib,  --enable-zlib	use zlib instead of gzip/gunzip)
AC_ARG_ENABLE(largefile,  --enable-largefile	enable large file more than 2GB)
AC_ARG_ENABLE(longid, --enable-longid  use 32bit word id (incompatible with conventional (16bit) id))
AC_ARG_ENABLE(remote_model, --enable-remote-model  Enable ngram daemon)
HAVE_ZLIB_H=0

includedir="-I. -I./libs"
CFLAGS="-g -Wall"
LIBS="-Llibs -lslm"

if test "$enable_zlib" -a "$HAVE_ZLIB_H"; then
  CFLAGS="$CFLAGS -DHAVE_ZLIB"
  LIBS="$LIBS -lz"
fi

if test "$enable_largefile"; then
  AC_DEFINE(ENABLE_LARGEFILE)
fi
if test "$enable_longid"; then
  AC_DEFINE(ENABLE_LONGID)
fi
RMODEL_LIB_OBJS=
RMODEL_CMDS=
if test "$enable_remote_model"; then
  RMODEL_LIB_OBJS=net.o
  RMODEL_CMDS=ngramd
fi
AC_SUBST(RMODEL_LIB_OBJS)
AC_SUBST(RMODEL_CMDS)
LIBS="$LIBS -lm"

AC_OUTPUT(Makefile libs/Makefile)
